edits through simulations-individual differences

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -30,16 +30,39 @@
   pages       = {169--211},
 }
 
+@incollection{conaway2015dissociation,
+ author = "Conaway, Nolan B. and Kurtz, K. J.",
+ title = "A dissociation between categorization and similarity to exemplars",
+ booktitle = "Proceedings of the 37th Annual Conference of the Cognitive Science Society",
+ editor = "D. C. Noelle and R. Dale",
+ address = "Austin, TX",
+ publisher = "Cognitive Science Society",
+ pages = "435--440",
+ year = 2015
+}
+
 @article{conaway2016similar,
-  author="Conaway, Nolan and Kurtz, Kenneth J.",
+  author="Conaway, Nolan B. and Kurtz, Kenneth J.",
   title="Similar to the category, but not the exemplars: A study of generalization",
   journal="Psychonomic Bulletin {\&} Review",
   year="2016",
   pages="1--12",
-  abstract="Reference point approaches have dominated the study of categorization for decades by explaining classification learning in terms of similarity to stored exemplars or averages of exemplars. The most successful reference point models are firmly grounded in the associative learning tradition---treating categorization as a stimulus generalization process based on inverse exponential distance in psychological space augmented by a dimensional selective attention mechanism. We present experiments that pose a significant challenge to popular reference point accounts which explain categorization in terms of stimulus generalization from exemplars, prototypes, or adaptive clusters. DIVA, a similarity-based alternative to the reference point framework, provides a successful account of the human data. These findings suggest that a successful psychology of categorization may need to look beyond stimulus generalization and toward a view of category learning as the induction of a richer model of the data.",
   issn="1531-5320",
   doi="10.3758/s13423-016-1208-1",
 }
+
+
+@incollection{conaway2016generalization,
+ author = "Conaway, Nolan B. and Kurtz, K. J.",
+ title = " Generalization of within-category feature correlations",
+ booktitle = "Proceedings of the 38th Annual Conference of the Cognitive Science Society",
+ editor = "A. Papafragou and D. Grodner and D. Mirman and J. Trueswell",
+ address = "Austin, TX",
+ publisher = "Cognitive Science Society",
+ pages = "2375--2380",
+ year = 2016
+}
+
 
 @book{garner1974processing,
  author = "Garner, W. R.",
@@ -172,6 +195,17 @@
   publisher={American Psychological Association}
 }
 
+
+@article{nosofsky1994comparing,
+ author = "Nosofsky, R. M. and Gluck, M. A. and Palmeri, T. J. and McKinley, S. C.",
+ title = "Comparing models of rule-based classification learning: {A} replication and extension of {Shepard}, {Hovland}, and {Jenkins} (1961)",
+ journal = "Memory \& Cognition",
+ volume = "22",
+ number = "3",
+ pages = "352--369",
+ year = 1994
+}
+
 @book{pothoswills2011,
   author = {E. M. Pothos and A. J. Wills},
   title = {Formal Approaches in Categorization},
@@ -211,6 +245,18 @@
   pages={325--345},
   year={1957},
   publisher={Springer}
+}
+
+
+@article{shepard1961learning,
+  title={Learning and memorization of classifications.},
+  author={Shepard, Roger N and Hovland, Carl I and Jenkins, Herbert M},
+  journal={Psychological Monographs: General and Applied},
+  volume={75},
+  number={13},
+  pages={1},
+  year={1961},
+  publisher={American Psychological Association}
 }
 
 @article{shepard1964attention,
