--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -186,8 +186,6 @@ PACKER sets $f(x_j)$ depending on exemplar $x_j$'s category membership: $f(x_j) 
 	\end{center}
 \end{figure}
 
-However, PACKER is only one possible exemplar-based account of category generation within our proposed framework. PACKER places specific constraints on the possible values of $f(x_j)$, but other exemplar-based category generation models with drastically different behavior can be formalized in this framework by imposing alternative constraints. For example, as will be discussed in more detail below, PACKER is formally equivalent to the copy-and-tweak model proposed by \cite{jern2013probabilistic} when $\gamma = 1$. Likewise, when $\gamma = 0$, PACKER represents a contrast-only generation mode, relying exclusively on contrast when generating new categories. Finally, when $f(x_j) = -1$ for all $x_j$ (regardless of class membership), a ``pure-packing'' approach is yielded, generating items in any unoccupied area of the domain. Thus, the proposed framework may be used to describe a wide variety of qualitatively distinct generation strategies.
-
 The probability that a given candidate $y$ will be generated is evaluated using an Exponentiated \citet{luce1977choice} choice rule. Candidates with greater values of $a$ are more likely to be generated than candidates with smaller values:
 % 
 \begin{equation}
@@ -199,7 +197,10 @@ p(y) = \dfrac
 % 
 where $\theta$ ($\theta \geq 0$) is a free parameter controlling response determinism. 
 
-It is worth noting that PACKER represents just one of many possible models that incorporate contrast in category generation. For example, although it may be possible to extend \cite{jern2013probabilistic}'s hierarchical sampling model to include contrast, but this mechanism would be at odds with a conjugate hierarchical Bayesian framework. In fact, we will discuss integrating our approaches in the General Discussion. In contrast, these ideas emerge naturally from the exemplar view: we have not modified any of the core elements of the GCM in defining the PACKER model, we simply aggregated similarity slightly differently. 
+It is worth noting that PACKER is only one possible exemplar-based account of category generation within our proposed framework. That is, PACKER places specific constraints on the possible values of $f(x_j)$, but other exemplar-based category generation models with drastically different behavior can be formalized in this framework by imposing alternative constraints. For example, as will be discussed in more detail below, PACKER is formally equivalent to the copy-and-tweak model proposed by \cite{jern2013probabilistic} when $\gamma = 1$. Likewise, when $\gamma = 0$, PACKER represents a contrast-only generation mode, relying exclusively on contrast when generating new categories. Finally, when $f(x_j) = -1$ for all $x_j$ (regardless of class membership), a ``pure-packing'' approach is yielded, generating items in any unoccupied area of the domain. Thus, the proposed framework may be used to describe a wide variety of qualitatively distinct generation strategies.
+
+
+It is also worth noting that PACKER represents just one of many possible models that incorporate contrast in category generation. For example, although it may be possible to extend \cite{jern2013probabilistic}'s hierarchical sampling model to include contrast, this mechanism would be at odds with a conjugate hierarchical Bayesian framework. In contrast, these ideas emerge naturally from the exemplar view: we have not modified any of the core elements of the GCM in defining the PACKER model, we simply aggregated similarity slightly differently. Thus, beyond formally specifying the role of contrast in creative generation, the PACKER account allows us to evaluate the well-understood principles of the exemplar view within the comparatively understudied field of conceptual generation. Nonetheless, we will discuss integrating our approaches in the General Discussion.
 
 \subsubsection{Relation Between PACKER and Copy-And-Tweak}
 \label{section:copytweak-packer}
@@ -210,23 +211,25 @@ In this paper, we report simulations using this copy-and-tweak model. This model
 
 \subsection{Synopsis and Prognosis}
 
-Research on the creative generation of novel concepts has focused on the finding that generated categories tend to possess distributional commonalities with known categories. However, a fundamental goal of concept generation is to create something \textit{new} (i.e., different from what is already known). The manner in which generated categories differ from known ones is, nonetheless, poorly understood: Existing theories do not make strong predictions about how creatively generated concepts should systematically differ from existing ones. Above, we introduced a novel, exemplar-based model formalizing the roles of similarity and contrast in creative generation.
+Research on the creative generation of novel concepts has focused on the finding that generated categories tend to possess distributional commonalities with known categories. However, a fundamental goal of concept generation is to create something \textit{new} (i.e., different from what is already known). The manner in which generated categories differ from known ones is, nonetheless, poorly understood: Existing theories do not make strong predictions about how creatively generated concepts should systematically differ from existing ones. Above, we provided some early evidence of the influence of category contrast in published data \citep[][Experiment 3]{jern2013probabilistic}, and we introduced a novel, exemplar-based model formalizing the roles of similarity and contrast in creative generation.
 
 In the sections below, we present two experiments demonstrating systematic effects of category contrast on creative generation. Our experiments are based on \cite{jern2013probabilistic}'s paradigm: participants are first exposed to a single, experimenter-defined category, and are then asked to generate members of a new category. We then we report formal simulations comparing PACKER's account of our results to that of the hierarchical sampling and copy-and-tweak models developed by \cite{jern2013probabilistic}.
 
 
 \section{Experiment 1}
 
-To begin our investigation, we developed an artificial, two dimensional domain of squares, varying in color and size (see Figure \ref{fig:e1-conditions}, panel A). To foreshadow slightly, effects of contrast are strong and can be widely observed in category generation data. Accordingly, we began by testing the strength of these effects under a variety of learning conditions. This was achieved by training participants on categories possessing qualitatively different distributional structures, as shown in Figure \ref{fig:e1-conditions}. 
+To begin our investigation, we sought to extend the early evidence from the \cite{jern2013probabilistic} data, under a variety of learning conditions and using more standard stimulus materials. We developed an artificial, two dimensional domain of squares, varying in color and size (see Figure \ref{fig:e1-conditions}, panel A). These features have been used in numerous classification learning studies \cite[e.g.,][]{conaway2016similar,conaway2016generalization,shepard1961learning,nosofsky1994comparing}. Unlike those used in the \cite{jern2013probabilistic} experiments, proximity along these dimensions aligns more directly with perceptual similarity, allowing us to more directly evaluate the role of category contrast in creative generation. In order to extend the evidence provided by the \cite{jern2013probabilistic} data, we began by testing effects of category contrast under a variety of learning conditions. This was achieved by training participants on categories possessing qualitatively different distributional structures, as shown in Figure \ref{fig:e1-conditions}. 
+
+\nbcnote{can you think of other studies with size and color of squares as features?}
 
 Panels B-D of Figure \ref{fig:e1-conditions} show the locations of exemplars belonging to the experimenter-defined categories (`A', or `Alpha') that participants were assigned to learn about prior to generating a new category. In the `Cluster' type, category A is a tight cluster of examples in the space. Perceptually instantiated, the members of category A might, for example, be large and dark in color. In the `Row' type, category A has a row pattern across the space, varying along one feature but not the other. Thus, its members might all be dark in color but would vary in size. Finally, in the `XOR' type, the experimenter-defined category consists of two clusters separated in opposite corners of the space, conforming to the exclusive-or logical structure (e.g., members are small and dark or large and light). 
 
-It should be noted that in our experiments the assignment between the perceptual and conceptual dimensions (e.g., $X \rightarrow Size$, $Y \rightarrow Color$), as well as the direction of variation along each dimension (e.g., $dark \rightarrow light$ or $light \rightarrow dark$) was counterbalanced across participants. The category types in Figure \ref{fig:e1-conditions} are plotted in a conceptual space, rather than a perceptual space: each category type may have a different physical instantiation according to the counterbalance assignment. For example, the Cluster type  may be large and dark in color, or it may be small and light in color, depending on the assignment and direction of the dimensions. For this reason, below we will discuss generation within a conceptual space, rather than a physically instantiated one. Importantly, however, the conceptual organization of the category types remains constant across the counterbalanced assignments.
+It should be noted that in our experiments the assignment between the perceptual and conceptual dimensions (e.g., $X \rightarrow Size$, $Y \rightarrow Color$), as well as the direction of variation along each dimension (e.g., $dark \rightarrow light$ or $light \rightarrow dark$) was counterbalanced across participants. The category types in Figure \ref{fig:e1-conditions} are plotted in a conceptual space, rather than a perceptual space: thus, while the conceptual organization of the category types remains constant, each category type may have a different physical instantiation according to the counterbalance assignment. For example, the Cluster type  may be large and dark in color, or it may be small and light in color, depending on the assignment and direction of the dimensions. For this reason, below we will discuss generation within a conceptual space, rather than a physically instantiated one.
 
 \begin{figure}
     \begin{center}
     \inputpgf{figs/}{e1-conditions.pgf}
-    \caption{Stimulus domain and category types tested in Experiment 1. }
+    \caption{Stimulus domain and category types tested in Experiment 1. Stimuli are not drawn to scale.}
     \label{fig:e1-conditions}
     \end{center}
 \end{figure}
@@ -240,7 +243,8 @@ Interestingly, the XOR condition also offers a dissociation between the roles of
 
 \subsection{Participants \& Materials}
 
-183 participants were recruited from Amazon Mechanical Turk. Participants were randomly assigned to one condition: 64 participants were assigned to the Cluster condition, 61 were assigned to the Row condition, and 58 were assigned to the XOR condition. Stimuli were squares varying in color (RGB 25--230) and side length (3.0--5.8cm). These stimuli are slight variants of those used by \cite{conaway2016similar}, see Figure \ref{fig:e1-conditions}. The assignment of perceptual features (color, size) to axes of the domain space (x, y), as well as the direction of variation along each axis (e.g., $dark \rightarrow light$ or $light \rightarrow dark$) was counterbalanced across participants.
+183 participants were recruited from Amazon Mechanical Turk. Participants were randomly assigned to one condition: 64 participants were assigned to the Cluster condition, 61 were assigned to the Row condition, and 58 were assigned to the XOR condition. Stimuli were squares varying in color (RGB 25--230) and side length (3.0--5.8cm), see Figure \ref{fig:e1-conditions}. The assignment of perceptual features (color, size) to axes of the domain space (x, y), as well as the direction of variation along each axis (e.g., $dark \rightarrow light$ or $light \rightarrow dark$) was counterbalanced across participants.
+
 
 \subsection{Procedure}
 
@@ -305,7 +309,7 @@ Likewise, categories generated in the Row condition had less Y-axis range compar
 \subsection{Discussion}
 
 
-In Experiment 1 we sought to test whether category contrast imposes constraints on creative generation. We found strong evidence for effects of category contrast: Participants were more likely to generate stimuli that are more distant from (i.e., less similar to) members of a previously-learned category, and members of participant-generated categories tended to be more similar to one another than to members of previously-learned categories. We also partially replicated the classic finding that the distributional structure of generated categories reflects that of previously learned categories \citep{jern2013probabilistic,ward1994structured}: members of generated categories were more widely distributed along dimensions which were widely distributed in the experimenter-defined category. 
+In Experiment 1 we sought to extend our analysis of the \cite{jern2013probabilistic} data by evaluating the influence of category contrast on creative generation, given qualitatively different types of prior knowledge. We found strong evidence for effects of category contrast in each condition: Participants were more likely to generate stimuli that are more distant from (i.e., less similar to) members of a previously-learned category, and members of participant-generated categories tended to be more similar to one another than to members of previously-learned categories. We also partially replicated the classic finding that the distributional structure of generated categories reflects that of previously learned categories \citep{jern2013probabilistic,ward1994structured}: members of generated categories were more widely distributed along dimensions which were widely distributed in the experimenter-defined category. 
 
 Notably, however, we also found that participants who learned an XOR category (composed of exemplars following a positive diagonal, see Figure \ref{fig:e1-conditions}) tended to generate items according to a \textit{negative} feature correlation -- the opposite of what was present in the previously learned category. While this may be difficult to account for under existing theoretical approaches (which assume generated categories follow the same distributional structure as known categories), it can be concisely explained from a category contrast perspective. Specifically, within the XOR condition, individuals who seek to generate a category that is perceptually distinct from what is already known are left with only the upper-left and bottom-right quadrants of the space, as members of the previously-learned XOR category lie in the bottom-left and top-right. If examples are generated into both of the available quadrants, the generated category will possess a strongly negative correlation, opposing that of the experimenter-defined class.
 
@@ -362,8 +366,6 @@ We did, however, observe a notable subgroup of participants in each condition wh
 
 Because the conditions differ only in the Y-axis position of the experimenter-defined category, we then compared the conditions in terms of the frequency with which participants generated examples above and below the categories. Specifically, we counted the number of participants in each condition who placed at least one `Beta' exemplar on the top and bottom `rows' of the space (the maximum and minimum possible y-axis value, respectively). The resulting contingencies data are shown in Table \ref{table:e2-subset-table}. 
 
-\nbcnote{MADE IT HERE}
-
 \begin{table}
 \begin{center} 
 \caption{Experiment 2 results.} 
@@ -384,13 +386,13 @@ Because the conditions differ only in the Y-axis position of the experimenter-de
 \end{table}
 
 
-Firstly, it should be noted that nearly every participant utilized the top and/or bottom rows: only $10 / 122$ participants generated their category entirely within the interior region. Fisher's Exact Tests comparing the conditions reveal that more Middle participants generated an exemplar in the bottom row, $p < 0.001$, again demonstrating the role of contrast guiding where exemplars are generated. The conditions did not differ in use of the top of the space, $p = 0.16$, however, more Middle participants placed exemplars in the top \textit{and} bottom rows, $p = 0.038$. The latter effect is of interest here, as it indicates that the shape of the unoccupied space exerts some influence on the distributional structure of generated categories: participants in the Middle condition were more likely to generate a category spanning the entire Y-axis.
+Firstly, it should be noted that nearly every participant utilized the top and/or bottom rows: only $10 / 122$ participants generated their category entirely within the interior region. Fisher's Exact Tests comparing the conditions reveal that more Middle participants generated an exemplar in the bottom row, $p < 0.001$, again demonstrating the role of contrast in guiding where exemplars are generated. The conditions did not differ in use of the top of the space, $p = 0.16$, however, more Middle participants placed exemplars in the top \textit{and} bottom rows, $p = 0.038$. The latter effect is of interest here, as it indicates that the shape of the unoccupied space exerts some influence on the distributional structure of generated categories: participants in the Middle condition were more likely to generate a category spanning the entire Y-axis.
 
 \subsection{Discussion}
 
-In Experiment 2, we replicated the core findings from Experiment 1: stimuli are more likely to be generated if they are distant from exemplars in other categories, and most participants generate categories with more between-class than within-class distance. However, we additionally found that the \textit{position} of a previously learned category (rather than its distributional structure) influences the types of categories people generate: participants who learned the `Middle' type were more likely to generate categories spanning the entire Y-axis of the space. Participants who learned the `Bottom' type were less likely to do so, presumably because of the presence of opposite category exemplars in the lower regions of the space.
+In Experiment 2, we replicated the core findings from Experiment 1: stimuli are more likely to be generated if they are distant from exemplars in other categories, and most participants generate categories with more between-class than within-class distance. However, we additionally found that the \textit{position} of a previously learned category (rather than its distributional structure) influences the types of categories people generate: participants who learned the `Middle' type were more likely to generate categories spanning the entire Y-axis of the space. Participants who learned the `Bottom' type were less likely to do so as a result of the presence of opposite category exemplars in the lower regions of the space.
 
-This finding cannot be explained under the theoretical perspective that the distributional structure of previously learned categories is the sole determinant of the distributional structure of generated categories. However, the observed performance is sensible under a category contrast perspective: participants seeking to generate a perceptually distinct category will be more likely to use areas of space that are unoccupied by exemplars belonging to previously learned categories. In the Middle condition, the upper and lower regions of space are equidistant from members of the experimenter-defined category, whereas in the Bottom condition, the lower region of the space is closer to members of the experimenter-defined category. Thus, while Middle participants may form categories around the use of the equally unoccupied areas, the same is not true for the Bottom condition.
+This finding cannot be explained under the viewpoint that the distributional structure of previously learned categories is the sole determinant of the distributional structure of generated categories. However, the observed performance is sensible given a category contrast perspective: participants seeking to generate a perceptually distinct category will be more likely to use areas of space that are unoccupied by exemplars belonging to previously learned categories. In the Middle condition, the upper and lower regions of space are equidistant from members of the experimenter-defined category, whereas in the Bottom condition, the lower region of the space is closer to members of the experimenter-defined category. Thus, while Middle participants may form categories around the use of the equally unoccupied areas, the same is not true for the Bottom condition.
 
 \section{Model-based Analyses}
 
@@ -428,7 +430,7 @@ Through comparison with the copy-and-tweak model, Figure \ref{fig:packer-loglike
 \begin{figure}
     \begin{center}
     \inputpgf{figs/}{packer-loglike.pgf}
-    \caption{PACKER's fit as a function of sensitivity to between-class contrast (using the $\gamma$ parameter). To facilitate comparison, PACKER's other parameters ($c$, $\theta$) were set to the best fitting values obtained for copy-and-tweak in Table \ref{table:global-model-fits}. Thus, in this figure PACKER is equivalent to copy-and-tweak when $\gamma = 1$. }
+    \caption{PACKER's fit as a function of sensitivity to between-class contrast (using the $\gamma$ parameter). To facilitate comparison, PACKER's other parameters ($c$, $\theta$) were set to the best fitting values obtained for copy-and-tweak in Table \ref{table:global-model-fits}. }
     \label{fig:packer-loglike}
     \end{center}
 \end{figure}
