added range diff figure to manuscript

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -275,7 +275,7 @@ To begin, it is worth noting that we observed a substantial degree of individual
     \end{center}
 \end{figure}
 
-To evaluate the role of contrast in category generation, we computed the number of times each stimulus was generated, as a function of its average city-block distance from members of the experimenter-defined ``Alpha'' category. These data, shown in Figure \ref{fig:e1-distanceplots}, reveal a clear pattern: examples that are more distant from members of the experimenter-defined categories are more likely to be generated into a new category. 
+To evaluate the role of contrast, we computed the number of times each stimulus was generated, as a function of its average city-block distance from members of the experimenter-defined ``Alpha'' category. These data, shown in Figure \ref{fig:e1-distanceplots}, reveal a clear pattern: examples that are more distant from members of the experimenter-defined categories are more likely to be generated into a new category. 
 
 \begin{figure}
     \begin{center}
@@ -435,6 +435,16 @@ Through comparison with the copy-and-tweak model, Figure \ref{fig:packer-loglike
 
 
 \subsection{Individual Differences}
+
+
+\begin{figure}[p]
+    \begin{center}
+    \inputpgf{figs/}{range-diff-gradients.pgf}
+    \caption{Behavioral and simulated relative range gradients. Each panel shows, for each stimulus, the dimensional orientation of the categories it was generated into: vertically aligned `columns' versus horizontally aligned `rows'.}
+    \label{fig:range-diff-gradients}
+    \end{center}
+\end{figure}
+
 
 \section{General Discussion}
 
